add secret related models and endpoints
