# models/secret_list_item.go
@@ -1,0 +1,17 @@
+/*
+ * Databricks
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: 0.0.1
+ *
+ * Generated by: https://github.com/swagger-api/swagger-codegen.git
+ */
+
+package models
+
+type SecretListItem struct {
+	Key string `json:"key,omitempty"`
+
+	LastUpdatedTimestamp string `json:"last_updated_timestamp,omitempty"`
+}
